--- a/MapConfigData/mapconfigdata.ui
+++ b/MapConfigData/mapconfigdata.ui
@@ -17,7 +17,13 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MapConfigData</string>
+   <string>Map Config Data</string>
+  </property>
+  <property name="documentMode">
+   <bool>false</bool>
+  </property>
+  <property name="tabShape">
+   <enum>QTabWidget::Rounded</enum>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
@@ -37,7 +43,7 @@
         <item row="0" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;MCD&lt;/span&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt; (Map Config Dat) - утилита которая встроит в карту метаданные, которые помогут хостботам точнее опознать карту (если они это поддерживают). По своей сути заменяет cfg файл, который обычно лежит рядом с ботом.&lt;br/&gt;&lt;br/&gt;&lt;/span&gt;&lt;span style=&quot; font-size:12pt; font-weight:600; font-style:italic;&quot;&gt;MCD&lt;/span&gt;&lt;span style=&quot; font-size:12pt; font-style:italic;&quot;&gt; перепишет некоторые байты, которые карте особо не нужны.&lt;br/&gt;&lt;br/&gt;&lt;/span&gt;&lt;span style=&quot; font-size:12pt; text-decoration: underline;&quot;&gt;Откройте карту, чтобы узнать какие данные можно записать в карту.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;MCD&lt;/span&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt; (Map Config Dat) - утилита которая встроит в карту метаданные, которые помогут хостботам точнее опознать карту (если они это поддерживают). По своей сути заменяет cfg файл, который обычно лежит рядом с картой.&lt;br/&gt;&lt;br/&gt;&lt;/span&gt;&lt;span style=&quot; font-size:12pt; font-weight:600; font-style:italic;&quot;&gt;MCD&lt;/span&gt;&lt;span style=&quot; font-size:12pt; font-style:italic;&quot;&gt; перепишет некоторые байты, которые карте особо не нужны.&lt;br/&gt;&lt;br/&gt;&lt;/span&gt;&lt;span style=&quot; font-size:12pt; text-decoration: underline;&quot;&gt;Откройте карту, чтобы узнать какие данные можно записать в карту.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -90,6 +96,7 @@
     <property name="title">
      <string>Добавить</string>
     </property>
+    <addaction name="MAutohost"/>
    </widget>
    <addaction name="MFile"/>
    <addaction name="MAdd"/>
@@ -116,6 +123,14 @@
    </property>
    <property name="text">
     <string>Вставить метаданные</string>
+   </property>
+  </action>
+  <action name="MAutohost">
+   <property name="text">
+    <string>Автохост</string>
+   </property>
+   <property name="CustomIndex" stdset="0">
+    <number>8</number>
    </property>
   </action>
  </widget>
